# soundtouch-android

./: LICENSE.txt  README.md  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  SoundTouchJni.cpp
src/main/cpp/soundtouch/: AndroidSTLNone.cpp  CMakeLists.txt  FIFOSampleBuffer.cpp  FIRFilter.cpp  FIRFilter.h  RateTransposer.cpp  RateTransposer.h  SoundTouch.cpp  TDStretch.cpp  TDStretch.h
src/main/cpp/soundtouch/include/: FIFOSampleBuffer.h  FIFOSamplePipe.h  STTypes.h  SoundTouch.h
src/main/java/com/hipxel/soundtouch/: Setting.kt  SoundTouch.kt
